--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
 
   <h1>WinZza</h1>
-  <p>Please let us know what you think!</p>
-
-
-
-  <label>Do you like our food?</label>
+  <h3>Please let us know what you think!</h3>
+  <br />
+  <br />
+  
+  <!--<label>Do you like our food?</label>
   <div class="dropdown">
     <button class="btn btn-primary btn-lg dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Do you like our food?
@@ -16,9 +16,9 @@
       <a class="dropdown-item" href="#">Something else here</a>
     </div>
   </div>
-  <hr />
+  <hr />-->
 
-  <label>Where did you hear about us?</label>
+  <!--<label>Where did you hear about us?</label>
   <ul class="list-group">
     <li class="list-group-item" [class.active]="active === i" (click)="onClick(i)" *ngFor="let s of sourceGroup; let i = index;">
       {{ s }}
@@ -26,15 +26,18 @@
     </li>
   </ul>
 
-  <hr />
+  <hr />-->
 
-  <ul class="list-group">
-    <li class="list-group-item" [class.active]="active === i" (click)="onClick(i)" *ngFor="let q of questions; let i = index;">
-      {{ q }}
-      <i class="fa fa-chevron-right"></i>
-    </li>
-  </ul>
-
+  <div *ngFor="let q of questions; let i = index;">
+    <label>{{ q.questionDesc }}</label>
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-action" [class.active]="active === j" (click)="onClick(j)" *ngFor="let c of q.choices; let j = index;">
+        {{ c }}
+        <i class="fa fa-chevron-right"></i>
+      </li>
+    </ul>
+    <hr/>
+  </div>
 
 </div>
 
