--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -31,7 +31,7 @@
   <div *ngFor="let q of questions; let i = index;">
     <label>{{ q.questionDesc }}</label>
     <ul class="list-group">
-      <li class="list-group-item list-group-item-action" [class.active]="active === j" (click)="onClick(j)" *ngFor="let c of q.choices; let j = index;">
+      <li class="list-group-item list-group-item-action" [class.active]="questions[i].activeChoice === j" (click)="onClick(i,j)" *ngFor="let c of q.choices; let j = index;">
         {{ c }}
         <i class="fa fa-chevron-right"></i>
       </li>
