--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -5,29 +5,6 @@
   <br />
   <br />
   
-  <!--<label>Do you like our food?</label>
-  <div class="dropdown">
-    <button class="btn btn-primary btn-lg dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Do you like our food?
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-    </div>
-  </div>
-  <hr />-->
-
-  <!--<label>Where did you hear about us?</label>
-  <ul class="list-group">
-    <li class="list-group-item" [class.active]="active === i" (click)="onClick(i)" *ngFor="let s of sourceGroup; let i = index;">
-      {{ s }}
-      <i class="fa fa-chevron-right"></i>
-    </li>
-  </ul>
-
-  <hr />-->
-
   <div *ngFor="let q of questions; let i = index;">
     <label>{{ q.questionDesc }}</label>
     <ul class="list-group">
@@ -38,6 +15,7 @@
     </ul>
     <hr/>
   </div>
-
+  <input type="button" [disabled]="responses.length === 0" class="btn btn-primary" value="Submit" (click)="onSave()" />
+  <hr />
 </div>
 
