--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
 
   <h1>WinZza</h1>
-  <h3>Please let us know what you think!</h3>
+  <h3>We're listening!</h3>
   <br />
   <br />
-  
+
   <div *ngFor="let q of questions; let i = index;">
     <label>{{ q.questionDesc }}</label>
     <ul class="list-group">
@@ -13,8 +13,15 @@
         <i class="fa fa-chevron-right"></i>
       </li>
     </ul>
-    <hr/>
+    <hr />
   </div>
+  <label>Please enter your information</label>
+  <input class="form-control" placeholder="Name" #box1 (keyup.enter)="getName(box1.value)" (blur)="getName(box1.value)">
+  <hr />
+  <input class="form-control" placeholder="Phone" #box2 (keyup.enter)="getPhone(box2.value)" (blur)="getPhone(box2.value)">
+  <hr />
+  <input class="form-control" placeholder="Email" #box3 (keyup.enter)="getEmail(box3.value)" (blur)="getEmail(box3.value)">
+  <hr />
   <input type="button" [disabled]="responses.length === 0" class="btn btn-primary" value="Submit" (click)="onSave()" />
   <hr />
 </div>
