--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -3,6 +3,12 @@
   .img-div {
     background-size: cover;
   }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
   .optin{
     font-size: small;
   }
@@ -14,7 +20,7 @@
     <!--<h1>WinZza</h1>
   <h4>We are listening!</h4>-->
     <div class="img-container">
-      <img [src]="imageSrc"/>
+      <img [src]="imageSrc" class="center"/>
     </div>
     <!--<div [ngStyle]="{'background-image': 'url(' + imageSrc + ')'}"></div>-->
   
