--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+.img-div {
+  background-size: cover;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.optin {
+  font-size: small;
+}
+.offer {
+  color:blue;
+}
+
+.input-group.is-invalid {
+  display: block;
+}
+input + span {
+  padding-right: 30px;
+}
+
+input:invalid + span:after {
+  position: absolute;
+  content: 'Please input valid phone number';
+  padding-left: 5px;
+  color: #8b0000;
+}
+
+/*input:valid + span:after {
+  position: absolute;
+  content: '✓';
+  padding-left: 5px;
+  color: #009000;
+}*/
+
