merged. Added optin saving

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -47,7 +47,7 @@
       <br />
       <label class="optin">Message and data rates may apply</label>
       <div class="custom-control custom-checkbox optin">
-        <input type="checkbox" class="custom-control-input" id="optIn" />
+        <input type="checkbox" name="optIn" id="optIn" [(ngModel)] = "optIn" class="custom-control-input"  />
         <label class="custom-control-label" for="optIn">I agree to receive 1 message per month</label>
       </div>
       <br />
