--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -49,7 +49,7 @@
       </div>
       <br />
       <div class="form-group">
-        <input type="button" class="btn btn-primary btn-lg btn-block" value="Submit" (click)="onSubmit()" />
+        <input type="button" [disabled]="responses.length==0" class="btn btn-primary btn-lg btn-block" value="Submit" (click)="onSubmit()" />
       </div>
     </form>
   </div>
