--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         <input class="form-control" id="email" name="email" placeholder="Email"
                email type="email" [(ngModel)]="email" #eml="ngModel">
 
-        <div *ngIf="eml.invalid && (eml.dirty || eml.touched)" class="alert-msg">
+        <div *ngIf="eml.invalid && eml.length > 0 && (eml.dirty || eml.touched)" class="alert-msg">
           <div *ngIf="eml.errors.email">Please input valid email</div>
         </div>
       </div>
