--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div>
-    <h4>Please enter your information</h4>
+    <h4>About You</h4>
     <form>
       <div class="form-group">
         <input class="form-control" id="name" name="name" placeholder="Name" minlength="4"
@@ -26,7 +26,7 @@
         <input class="form-control" id="email" name="email" placeholder="Email"
                email type="email" [(ngModel)]="email" #eml="ngModel">
 
-        <div *ngIf="eml.invalid && eml.length > 0 && (eml.dirty || eml.touched)" class="alert-msg">
+        <div *ngIf="eml.invalid && (eml.dirty || eml.touched)" class="alert-msg">
           <div *ngIf="eml.errors.email">Please input valid email</div>
         </div>
       </div>
