--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -30,7 +30,7 @@
           <div *ngIf="eml.errors.email">Please input valid email</div>
         </div>
       </div>
-      <br /> 
+      <br />
       <div class="form-group">
         <input class="form-control" id="phone" name="phone" placeholder="Phone"
                type="tel" [(ngModel)]="phone" #phn="ngModel" minlength="10">
@@ -42,15 +42,16 @@
       <br />
       <label class="offer">Enter phone number for 5 FREE WINGS!</label>
       <br />
-      <label class="optin">Message and data rates may apply</label>
+      <terms-and-conditions-modal></terms-and-conditions-modal>
       <div class="custom-control custom-checkbox optin">
-        <input type="checkbox" name="optIn" id="optIn" [(ngModel)] = "optIn" class="custom-control-input"  />
+        <input type="checkbox" name="optIn" id="optIn" [(ngModel)]="optIn" class="custom-control-input" />
         <label class="custom-control-label" for="optIn">I agree to receive 1 message per month</label>
       </div>
       <br />
       <div class="form-group">
         <input type="button" [disabled]="!submitBtnState()" class="btn btn-primary btn-lg btn-block" value="Submit" (click)="onSubmit()" />
       </div>
+      <br>
     </form>
   </div>
 </div>
