font reduced for terms and conditions

--- a/ClientApp/src/app/home/termsAndConditions-modal.html
+++ b/ClientApp/src/app/home/termsAndConditions-modal.html
@@ -11,4 +11,4 @@
 </ng-template>
 
 <!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
-<a href="#" (click)="open(content)">Terms And Conditions</a>
+<a href="#" style="font-size:smaller" (click)="open(content)">Terms And Conditions</a>
