aesthetic changes to termsAndConditions popup

--- a/ClientApp/src/app/home/termsAndConditions-modal.html
+++ b/ClientApp/src/app/home/termsAndConditions-modal.html
@@ -1,6 +1,6 @@
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Terms And Conditions</h4>
+    <h4 class="modal-title offer" id="modal-basic-title">Terms And Conditions</h4>
   </div>
   <div class="modal-body">
     <p>{{termsAndConditions}}</p>
