updated modal to use @Input parameter so it is more dynamic

--- a/ClientApp/src/app/home/confirmation-modal.html
+++ b/ClientApp/src/app/home/confirmation-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-body">
-  <h4 class="modal-title offer">{{confirmationContent}}</h4>
+  <h4 class="modal-title offer">{{content}}</h4>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close clicked')">Close</button>
