--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -18,6 +18,14 @@
   font-weight: bold;
 }
 
+.info {
+  color: green;
+}
+
+.error {
+  color: red;
+}
+
 .alert-msg {
   position: absolute;
   padding-left: 5px;
